<resources>
    <string name="app_name">GSB</string>
    <string name="text_accueil">Sélectionnez un échantillon pour le modifier ou le supprimer</string>
    <string name="button_ajoutEchantillon">Ajouter un nouvel echantillon</string>
    <string name="button_listeEchantillon">Liste des echantillons</string>
    <string name="button_majEchantillon">MAJ d\'un echantillon</string>

    <string name="button_valider">Valider</string>
    <string name="button_quitter">Quitter</string>
    <string name="textview_liste_titre">Liste des échantillons :</string>

    <string name="editext_ajout_code">Saisir un code</string>
    <string name="editext_ajout_libelle">Saisir un libellé</string>
    <string name="editext_ajout_stock">Saisir un stock</string>
    <string name="textview_ajout_titre">Saisie d’un échantillon :</string>

    <string name="edittext_maj_quantite">Saisir une quantité</string>
    <string name="button_maj_supprimer">Supprimer</string>
    <string name="button_maj_ajouter">Ajouter</string>
    <string name="textview_maj_titre">Mise à jour de l\'échantillon </string>
    <string name="title_activity_ajouter_comp">AjouterComp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>