<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MajEchantillon">

    <TextView
        android:id="@+id/tv_maj_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_maj_titre"
        app:layout_constraintBottom_toTopOf="@+id/et_maj_quantite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_maj_quantite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_maj_quantite"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_maj_titre" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="258dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/b_maj_quitter"
        app:layout_constraintTop_toBottomOf="@+id/et_maj_quantite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/b_maj_supprimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_maj_supprimer" />

        <Button
            android:id="@+id/b_maj_ajout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_maj_ajouter" />
    </LinearLayout>

    <Button
        android:id="@+id/b_maj_quitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_quitter"
        app:layout_constraintBottom_toTopOf="@+id/tv_maj_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_maj_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_maj_quitter" />

</androidx.constraintlayout.widget.ConstraintLayout>